--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,20 +36,38 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade > 80 %}
+    {% if grade >= 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+        <b>Congratulations {{ user.first_name }}!</b> You have passed the exam and completed the course with grade {{ grade }} / 100!
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            <b>Failed</b> Sorry {{ user.first_name }}! You have failed the exam with grade {{ grade }} / 100!
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
-    </div>
+            <h5 class="">Exam results</h5>
+                {% for question in course.question_set.all %}
+                    <div class="card mt-1">
+                        <div class="card-header"><h5>{{ question.question_text }}</h5></div>
+                        <div class="card-body">
+                           {% for choice in question.choice_set.all %}
+                                {% if choice.is_correct and choice in choices %}
+                                <div class="text-success"> Correct answer: 
+                                {% elif choice.is_correct and choice not in choices %}
+                                <div class="text-warning"> Not selected: 
+                                {% elif not choice.is_correct and choice in choices %}
+                                <div class="text-danger"> Wrong answer: 
+                                {% else %}
+                                <div>
+                                {% endif %}
+                                {{ choice.choice_text }}
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endfor %}
+</div>
 </body>
 </html>
