--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    {% load static %}
+     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -15,7 +14,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'onlinecourse:index' %}">Home</a>
+                  <a class="navbar-brand" href="{% url 'onlinecourse:index' %}">Home</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
@@ -28,8 +27,8 @@
                     <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
                         {% csrf_token %}
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username">
-                            <input type="password" class="form-control" placeholder="Username" name="psw">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Username" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
                             <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
                         </div>
@@ -42,46 +41,50 @@
 
     <!-- Page content -->
     <div class="container-fluid">
-        <h2>{{ course.name }}</h2>
-        <div class="card-columns-vertical">
-            {% for lesson in course.lesson_set.all %}
-            <div class="card mt-1">
-                <div class="card-header">
-                    <h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5>
-                </div>
-                <div class="card-body">{{lesson.content}}</div>
-            </div>
-            <button data-toggle="collapse" data-target="#exam_{{lesson.pk}}" class=" btn-primary btn-block"
-                style="background-color:darkcyan">Start Exam</button>
-            <div id="exam_{{lesson.pk}}" class="collapse">
-                <form id="questionform" action={% url "onlinecourse:submit" course.pk%} method="post">
-                    {% csrf_token %}
-
-                    {% for question in lesson.question_set.all %}
+            <h2>{{ course.name }}</h2>
+            <div class="card-columns-vertical">
+                {% for lesson in course.lesson_set.all %}
                     <div class="card mt-1">
-                        <div class="card-header">
-                            <h5>{{ question.question_text}}</h5>
-                        </div>
-                        <div class="form-group">
-                            {% for choice in question.choice_set.all %}
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input type="checkbox" name="choice_{{choice.id}}" class="form-check-input"
-                                        id="{{choice.id}}" value="{{choice.id}}">{{ choice.choice_text }}
-                                </label>
-                            </div>
-                            {% endfor %}
-                        </div>
-
+                        <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
+                        <div class="card-body">{{lesson.content}}</div>
                     </div>
-                    {% endfor %}
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
-                </form>
+                {% endfor %}
             </div>
+            <!-- Task: show questions and choices -->
+            <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
+            https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
-            {% endfor %}
-        </div>
+            
+
+            <!-- A collapse example here:-->
+            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#exam">Start Exam</button>
+            <div id ="exam" class="collapse">
+    <!--A choice submission form example-->
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+                            <!--... for each question in the course ...-->
+                    {% for single_lesson in course.lesson_set.all %}
+                        {% for question in single_lesson.question_set.all %}
+                            <div class="card mt-1">
+                                <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                                {% csrf_token %}
+                                <div class="form-group">
+                                <!--... for each choice in the question ...-->
+                                {% for choice in question.choice_set.all %}
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" name="choice_{{choice.id}}"
+                                                class="form-check-input" id="{{choice.id}}"
+                                                value="{{choice.id}}">{{ choice.choice_content }}
+                                        </label>
+                                    </div>
+                                {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                      {% endfor %}  
+                    <input class="btn btn-success btn-block" type="submit" value="Submit">
+                </form> 
+            </div>
     </div>
 </body>
-
 </html>
