--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,38 +36,46 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade >= 80 %}
+    {% if grade > 80 %}
     <div class="alert alert-success">
-        <b>Congratulations {{ user.first_name }}!</b> You have passed the exam and completed the course with grade {{ grade }} / 100!
+       <!--HINT Display passed info -->
+       <p>Congratulation, {{ user.username }}! you have  passed the exam your score is {{grade}}/{{total_mark}}<p>
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <b>Failed</b> Sorry {{ user.first_name }}! You have failed the exam with grade {{ grade }} / 100!
+            <!--HINT Display failed info -->
+                <p>Faild, {{ user.username }}! you have  Faild the exam your score is {{grade}}/{{total_mark}}<p>
+
         </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' lesson.course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
-            <h5 class="">Exam results</h5>
-                {% for question in course.question_set.all %}
-                    <div class="card mt-1">
-                        <div class="card-header"><h5>{{ question.question_text }}</h5></div>
-                        <div class="card-body">
-                           {% for choice in question.choice_set.all %}
-                                {% if choice.is_correct and choice in choices %}
-                                <div class="text-success"> Correct answer: 
-                                {% elif choice.is_correct and choice not in choices %}
-                                <div class="text-warning"> Not selected: 
-                                {% elif not choice.is_correct and choice in choices %}
-                                <div class="text-danger"> Wrong answer: 
-                                {% else %}
-                                <div>
-                                {% endif %}
-                                {{ choice.choice_text }}
-                            </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                {% endfor %}
-</div>
+        <h5 class="">Exam results</h5>
+            <!--HINT Display exam results-->
+            {% for question in questions %}
+            <div class="card mt-1">
+                <div class="card-header"><h5>{{ question }}</h5></div>
+                <div class="card-body">
+                    {% for choice in question.choice_set.all %}
+                        {% if choice in selected_choices %}
+                            {% if choice.is_correct%}
+                                <p class="alert alert-success"> Correct Answer -- {{choice}}<p>
+                            {% else %}
+                                <p class="alert alert-danger"> Wrong Answer -- {{choice}}<p>
+                            {% endif %}
+                        {% else %}
+                            {% if choice.is_correct %}
+                                <p class="alert alert-warning">{{choice}}--unselected correct answer<p>
+                            {% else %}
+                                <p>{{choice}}<p>
+                            {% endif %}
+                            
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
 </body>
-</html>
+</html
